# camera-ng

./: .gitignore  README.md  TECHNICAL.md  main.py  pyproject.toml  test_gpu.py
camera_ng/: __init__.py  __main__.py  config.py  controller.py  handlers.py  main.py  stream.py  tracking.py  tts.py  vision.py
