[project]
name = "camera-ng"
version = "0.1.0"
description = "GPU-accelerated smart PTZ camera tracking and capture system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.1.3",
    "opencv-python==4.10.0.84",
    "PyYAML==6.0.2",
    "ultralytics==8.3.78",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]
